# manim-animations

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
animations/hiddengrid/: cell.py  config.toml  grid.py  interface.py  main.py  movements.py  traversal.py  utils.py
